# cw20-test

./: Cargo.toml  README.md
src/: contract.rs
